# mmg-ai-test

./: .gitignore  Dockerfile  EN-doc.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: mmg_data_small.csv  model.joblib
mmg_ai_test/: app.py  averager.py  constants.py  models.py  regressor.py
scripts/: run.py  train.py
tests/: test_averager.py  test_mmg_ai_test.py  test_regressor.py
