[tool.poetry]
name = "mmg-ai-test"
version = "0.1.0"
description = ""
authors = ["Xiang Chen <xiangchenchen96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.25.1"
scikit-learn = "^0.24.1"
pandas = "^1.2.3"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
